# donut

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md  conanfile.py  profile  pyproject.toml
.github/workflows/: ci.yaml
include/: quaternion.h
src/: CMakeLists.txt  main.c  quaternion.c  quaternion.h
src/donut/: main.c
test/: CMakeLists.txt  test.c
