[project]
name = "donut"
version = "0.2.3"
authors = [
  { name="Austin Lake", email="austinlake04@gmail.com" },
]
description = "A rotating donut displayed in ASCII"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache License 2.0",
    "Operating System :: OS Independent",
]
dependencies = [
]

[project.urls]
Homepage = "https://github.com/austinlucaslake/donut"

[project.optional-dependencies]
dev = ["black", "autopep8", "flake8", "flake8-docstrings", "autoflake", "pytest", "pipreqs", "pip-tools"]
